--- a/challenge-4.html
+++ b/challenge-4.html
@@ -1,18 +1,40 @@
-“The first step toward success is taken when you refuse 
-to be a captive of the environment in which you first 
-find yourself.”
+<ul>
+	<li>
+		<blockquote>
+			<p>
+				“The first step toward success is taken when you refuse 
+				to be a captive of the environment in which you first 
+				find yourself.”
+			</p>
+			<footer>
+				<cite>-Mark Caine</cite>
+			</footer>
+		</blockquote>
+	</li>
+	<li>
+		<blockquote>
+			<p>
+				“Twenty years from now you will be more disappointed by 
+				the things that you didn’t do than by the ones you 
+				did do.”
+			</p>
+			<footer>
+				<cite>-Mark Twain</cite>
+			</footer>
+		</blockquote>
+	</li>
+	<li>
+		<blockquote>
+			<p>
+				“Those who dare to fail miserably can achieve greatly.”
+			</p>
+			<footer>
+				<cite>-John F. Kennedy</cite>
+			</footer>
+		</blockquote>
+	</li>
+</ul>
 
--Mark Caine
-
-“Twenty years from now you will be more disappointed by 
-the things that you didn’t do than by the ones you 
-did do.”
-
--Mark Twain
-
-“Those who dare to fail miserably can achieve greatly.”
-
--John F. Kennedy
 
 <!-- 
 
