--- a/challenge-5.html
+++ b/challenge-5.html
@@ -1,18 +1,15 @@
-Weather forecast for Seattle
-
-Three day forecast
-
-03 March 2018
-
-Rain.
-
-04 March 2018
-
-Periods of rain.
-
-05 March 2018
-
-Heavy rain.
+<article>
+	<header>Weather forecast for Seattle</header>
+	<dl>
+		Three day forecast
+		<dt><time>03 March 2018</time></dt>
+		<dd>Rain.</dd>
+		<dt><time>04 March 2018</time></dt>
+		<dd>Periods of rain.</dd>
+		<dt><time>05 March 2018</time></dt>
+		<dd>Heavy rain.</dd>
+	</dl>
+</article>
 
 <!-- 
 
