--- a/challenge-1.html
+++ b/challenge-1.html
@@ -4,24 +4,30 @@
 		<title>Rules for Writing Haiku</title>
 	</head>
 	<body>
+		<section>
+		<header>Rules for Writing Haiku</header>
+			<p>
+			While some forms of poetry have free rein with regard to their subject or number of lines and syllables, the haiku was
+			established in Japan as far back as the 9th century with a specific structure, style, and philosophy. Many poets still
+			write in the original 5-7-5 syllable pattern and follow the traditional rules for writing haiku.
+			</p>
+		</section>
 
-		Rules for Writing Haiku
-
-		While some forms of poetry have free rein with regard to their subject or number of lines and syllables, the haiku was
-		established in Japan as far back as the 9th century with a specific structure, style, and philosophy. Many poets still
-		write in the original 5-7-5 syllable pattern and follow the traditional rules for writing haiku.
-
-		Style of Haiku Poetry
-
+		<section>
+		<header>Style of Haiku Poetry</header>
+			<p>
 		What is a haiku? It is a three-line, beautifully descriptive, form of poetry, intended to be read in one breath. If read
 		in Japanese, most traditional haiku would have five syllables, or sounds, in the first line, seven in the second, and
 		five in the last. The Academy of American Poets asserts, "As the form evolved, many of these rules - including the 5-7-5
 		practice - have routinely been broken. However, the philosophy of haiku has been preserved: the focus on a brief moment
 		in time; a use of provocative, colorful images; an ability to be read in one breath; and a sense of sudden enlightenment
 		and illumination."
+			</p>
+		</section>
 
-		Traditional Haiku Structure
-
+		<header>Traditional Haiku Structure</header>
+<section>
+	<p>
 		The structure of a traditional haiku is always the same, including the following features:
 		
 		1. There are only three lines, totaling 17 syllables.
@@ -31,40 +37,54 @@
 		5. Punctuation and capitalization are up to the poet, and need not follow the rigid rules used in structuring sentences.
 		6. A haiku does not have to rhyme, in fact usually it does not rhyme at all.
 		7. It can include the repetition of words or sounds
+	</p>
+</section>
 
-		Steps for Writing a Haiku
-
+<section>
+		<header>Steps for Writing a Haiku</header>
+<p>
 		Even though there are specific rules for writing a traditional haiku, the process can still be fun and rewarding. And
 		remember that a modern haiku can be more freeform.
-		
+</p>
+<p>
 		If you are wondering how to write a haiku for the first time, consider the following steps:
-		
+</p>
+<p>
 		1. Begin by reading examples of haiku - there are some below - to help you get inspired about the subjects and construction
 		of haiku. A haiku is a beautiful form of poetry, so take time to appreciate it before you begin writing it. You can find
 		more examples of haiku poems on YourDictionary or in your local library.
-		
+</p>
+<p>
 		2. Create a list of possible subjects that you might write about, considering various aspects of nature that inspire you.
 		Consider traditional subjects like animals, nature, and seasons, or something completely different. Even the smallest
 		details can make for great haiku.
-		
+</p>
+<p>
 		3. After you choose a subject, you may want to look at a few pictures of it, or go outside and admire it. Like all of the
 		great poets before you, some of the greatest inspiration comes from simply admiring nature and the world around them.
-		
+</p>
+<p>
 		4. Make a list of words that relate to the subject you have chosen. Be as descriptive as possible. Think about feelings and
 		emotions too.
-		
+</p>
+<p>
 		5. The last line is usually used to make an observation about your subject. It can be fun to add a surprise here. Looking
 		through the list you wrote, can you create an unexpected relationship between the first two lines and the third?
-		
+</p>
+<p>
 		6. Decide if you want to write using the 5-7-5 rule or branch outside the limits of this pattern. (If you have trouble
 		determining the syllables in a word because you are not sure how to pronounce it, you can look up the word here on
 		YourDictionary for a count of the syllables.)
+</p>
+</section>
 
-		Examples of Traditional Haiku
-
+<section>
+		<header>Examples of Traditional Haiku</header>
+<p>
 		The most famed traditional Japanese poets include Matsuo Basho, Yosa Buson, Kobayashi Issa, and Masoaka Shiki. They are
 		known as "the Great Four" and their work is still the model for traditional haiku writing today.
-
+</p>
+<p>
 		An old silent pond,
 		A frog jumps into the pond,
 		splash! Silence again.
@@ -72,10 +92,12 @@
 		A crow has alighted:
 		Nightfall in autumn.
 		- Matsuo Basho
-
+</p>
+<p>
 		The traditional form of haiku has also been embraced by English-speaking poets. Here are two examples by Kelly Roper
 		from our sister site LoveToKnow.com, both with a focus on nature.
-
+</p>
+<p>
 		The season gives way.
 		Winter lays down her mantle,
 		As spring bursts to life
@@ -83,9 +105,10 @@
 		The heron stands silently,
 		Fish sense death is near.
 		- Kelly Roper
-
+</p>
+		<footer>
 		This article adapted from https://grammar.yourdictionary.com/style-and-usage/rules-for-writing-haiku.html
-
+		</footer>
 	</body>
 </html>
 
