--- a/challenge-3.html
+++ b/challenge-3.html
@@ -1,8 +1,14 @@
-“The first step toward success is taken when you refuse 
-to be a captive of the environment in which you first 
-find yourself.”
+<blockquote>
+	<p>
+			“The first step toward success is taken when you refuse 
+		to be a captive of the environment in which you first 
+		find yourself.”
+	</p>
+	<footer>
+		<cite>- Mark Caine</cite>
+	</footer>
+</blockquote>
 
-- Mark Caine
 
 <!-- 
 
