--- a/challenge-6.html
+++ b/challenge-6.html
@@ -1,17 +1,28 @@
-Barack Obama
+<article>
+<header>Obama
 @BarackObama
-
-Jul 9
-
+<time>Jul 9</time>
+</header>
+<p>
 It’s clear our communities are crying out for change—and what that change looks like is up to us. That’s why it’s
 important to take a hard look at all the perspectives and proposals out there, even the ones we disagree with. It’s how
 we’ll come up with solutions that last.
+</p>
+<footer>
+	<ul>
+		<li>
+			1.3K
+		</li>
+		<li>
+			4.3K
+		</li>
+		<li>
+			29.7K
+		</li>
 
-1.3K
-4.3K
-29.7K
-
-Show this thread
+<a>Show this thread</a>
+</footer>
+</article>
 
 
 <!-- 
